[project]
name = "ws_tools"
version = "20231007"
description = ""
authors = [
    {name = "ws", email = "wwsuixin@qq.com"},
]
dependencies = [
    "Flask",
    "Requests",
    "tqdm",
    "xpinyin",
    "beautifulsoup4",
    "colorama",
    "HackRequests",
    "lxml",
    "pymmh3",
    "urllib3",
    "xlsxwriter",
    "PySocks",
    "Jinja2",
    "certifi",
    "cryptography",
    "cffi",
    "defusedxml",
    "markupsafe",
    "pyopenssl",
    "idna",
    "chardet",
    "charset-normalizer",
    "requests",
    "requests-ntlm",
    "ntlm-auth",
    "pyparsing",
    "setuptools",
    "wheel",
    "gevent",
    "cmd2",
    "config-file",
    "pyDes",
    "rich",
    "SocksiPy-branch",
    "threadpool",
    "configparser",
    "XlsxWriter",
    "mmh3",
    "prettytable",
    "aiohttp",
    "bs4",
    "docx2pdf",
    "pandas",
    "docx2txt",
    "node-vm2",
    "python-docx",
    "fake-headers",
    "hurry",
    "hurry-filesize",
    "BeautifulSoup4",
    "motor",
    "httpx",
    "dnspython",
    "console",
    "tldextract",
    "fake-useragent",
    "wcwidth",
    "unicorn",
    "pyreadline",
    "exrex",
    "fire",
    "loguru",
    "six",
    "soupsieve",
    "SQLAlchemy",
    "tenacity",
    "termcolor",
    "treelib",
    "win32-setctime",
    "argparse",
    "autopep8>=2.0.4",
    "pyquery",
    "aiohttp-proxy",
    "aiomultiprocess",
    "click",
    "pypandoc",
    "docx",
    "docxtpl",
    "Pillow",
    "pywin32",
    "paramiko",
]
requires-python = ">=3.11"
readme = "README.md"
license = {text = "MIT"}


[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

